--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,114 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<% include common-tags.ejs %>
+    <title>塔罗Ju</title>
+    <style>
+        .main-content{
+            position:relative;
+            padding-top:1px;
+            background: url(http://pic.jusctice.cn/bg-main.jpg);
+            background-size: cover;
+            margin-bottom:0;
+        }
+        .main-content-below{
+            padding-right: 15px;
+            padding-left: 15px;
+        }
+        .back,.cover{
+            position: absolute;
+            top:0;
+            left:0;
+        }
+        .back{
+            position: relative;
+            z-index: 15;
+            width:100%;
+            height: 100%;
+        }
+        .back:after{
+            clear: both;
+            content:"";
+        }
+        .text{
+            color:white;
+            text-align: center;
+            margin:auto;
+            padding:5rem 0 3rem;
+        }
+        .text h1{
+            font-size:3.4rem;
+        }
+        .text p {
+            line-height: 1.6;
+            font-size: 1.6rem;
+        }
+        .cover{
+            position: absolute;
+            z-index: 10;
+            background: rgba(34,34,34,.4);
+            height: 100%;
+            width:100%;
+        }
+        .small-cards-gallery-box img{
+            width:100%;
+        }
+        .small-cards-gallery-thumbnail{
+            padding:12px;
+            background:#672A2B;
+            display: block;
+            margin-bottom:30px;
+        }
+    </style>
+</head>
+<body>
+    <div class="wrapper">
+
+        <% include common-header.ejs %>
+        <% include IENotice.ejs %>
+        <section class="main-content">
+            <section class="back" id="back">
+                <div class="text col-xs-12">
+                    <h1 class="h1 mtb15">欢迎</h1>
+                    <p>标准伟特，收录常用牌形和卡面，适用于懒得动手的同好抽牌。</p>
+                    <p>无需注册，全站可跑</p>
+                    <p>登录后则自动记录历史记录</p>
+                </div>
+            </section>
+            <section class="cover" id="cover"></section>
+        </section>
+        <div class="container"></div>
+        <div class="main-content-below">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2 class="h2 mtb30 text-center">- 卡牌 -</h2>
+                </div>
+            </div>
+            <div class="row small-cards-gallery-box">
+                <div class="col-xs-6 col-sm-3">
+                    <a href="/itemDetail?sItemId=card-22" class="small-cards-gallery-thumbnail">
+                        <img src="imgs/21world.jpg" alt="21world" class="small-cards-gallery-item-img"/>
+                    </a>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <a href="itemDetail?sItemId=card-18" class="small-cards-gallery-thumbnail">
+                        <img src="imgs/17star.jpg" alt="17star" class="small-cards-gallery-item-img"/>
+                    </a>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <a href="itemDetail?sItemId=card-88" class="small-cards-gallery-thumbnail">
+                        <img src="imgs/cups-6.jpg" alt="cups-6" class="small-cards-gallery-item-img"/>
+                    </a>
+                </div>
+                <div class="col-xs-6 col-sm-3">
+                    <a href="itemDetail?sItemId=card-53" class="small-cards-gallery-thumbnail">
+                        <img src="imgs/pentacles-1.jpg" alt="pentacles-1" class="small-cards-gallery-item-img"/>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <% include common-footer.ejs%>
+    </div>
+    <script src="js/jquery-1.11.2-min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/indexJS.js"></script>
+</body>
 </html>
