隔得时间太久了提交一下最新的文件（不知道都是干啥的

--- a/views/common-head-tags.ejs
+++ b/views/common-head-tags.ejs
@@ -6,8 +6,8 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
 
-    <meta name="description" content="jusctice.cn是一个塔罗为主题的网站，收集了标准伟特的卡牌意思、卡牌图案，与常用的牌型">
-    <meta name="keywords" content="jusctice.cn,塔罗、伟特、维特">
+    <!--<meta name="description" content="jusctice.cn是一个塔罗为主题的网站，收集了标准伟特的卡牌意思、卡牌图案，与常用的牌型">-->
+    <!--<meta name="keywords" content="jusctice.cn,塔罗、伟特、维特">-->
 
     <meta NAME="author" content="oppaiyouma@163.com">
 
@@ -23,3 +23,4 @@
     <!--document.write(unescape("%3Cspan style='display:none' id='cnzz_stat_icon_1259912370'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1259912370' type='text/javascript'%3E%3C/script%3E"));-->
     <!--</script>-->
     <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/style.css"/>
