--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,8 +64,9 @@
 
         <% include common-header.ejs %>
         <% include IENotice.ejs %>
-        <div class="">
-            <p class="test1">test1</p>
+        <div class="row main-content">
+            <div class="col-sm-3 border-red"></div>
+            <div class="col-sm-9 border-red"></div>
         </div>
         <% include common-footer.ejs%>
     </div>
