--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,20 +1,248 @@
+@charset "UTF-8";
+@import url(helper.css);
+/*vars start*/
+/*vars end*/
+html {
+  font-size: 10px;
+}
+
+@media only screen and (min-width: 360px) {
+  html {
+    font-size: 11.25px !important;
+  }
+}
+@media only screen and (min-width: 401px) {
+  html {
+    font-size: 12.5px !important;
+  }
+}
+@media only screen and (min-width: 428px) {
+  html {
+    font-size: 13.375px !important;
+  }
+}
+@media only screen and (min-width: 461px) {
+  html {
+    font-size: 16px !important;
+  }
+}
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans","Microsoft YaHei","weiruanyahei",Arial,sans-serif !important;
+  background: #330f10;
+  color: #bac2f5;
 }
 
 a {
-  color: #00B7FF;
+  color: #bac2f5;
+}
+a:hover {
+  font-weight: bolder;
+  color: #bac2f5;
 }
 
-.test1 {
-  color: red;
+.wrapper {
+  overflow: hidden;
 }
 
-.test2 {
-  color: green;
+.logo-img {
+  display: inline-block;
+  height: 100%;
 }
 
-.test3 {
-  color: #eee;
+.divine-nav-block {
+  display: inline-block;
+}
+
+.divine-nav-block a {
+  color: #bac2f5;
+}
+.divine-nav-block a:hover, .divine-nav-block a:focus {
+  background: #47233e !important;
+  font-weight: bolder;
+}
+
+.container {
+  max-width: 1000px;
+}
+
+/*header start*/
+.header {
+  width: 100%;
+  height: 50px;
+  background: #1B0B18;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.header > div {
+  height: 100%;
+}
+.header .navbar-header {
+  height: 100%;
+  position: relative;
+}
+.header .navbar-header .header-search-input {
+  font-size: 1.6rem;
+}
+.header .navbar-header .header-search-box-mobile {
+  position: absolute;
+  right: 60px;
+  width: 100%;
+}
+.header .navbar-toggle {
+  outline: none;
+}
+.header .navbar-toggle:focus {
+  background: #47233e !important;
+}
+.header .navbar-toggle .icon-bar {
+  background: #bac2f5;
+}
+.header a {
+  color: #bac2f5;
+}
+.header a:hover {
+  background: #47233e !important;
+  font-weight: bolder;
+}
+.header a:focus {
+  background: none !important;
+}
+@media (max-width: 768px) {
+  .header .navbar-right {
+    float: right;
+    text-align: right;
+    padding: 0 5px;
+    margin: 0 -15px 0 0;
+    background: black;
+    position: relative;
+    z-index: 10;
+  }
+}
+
+.header-search-box {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 200px;
+  height: 50px;
+  float: right;
+}
+
+.header-search-box-mobile {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: 50px;
+  z-index: 5;
+}
+.header-search-box-mobile .header-search-input:focus {
+  outline: none;
+  border-bottom: 1px solid rgba(187, 156, 255, 0.3);
+}
+
+@media (min-width: 768px) {
+  .header-search-box-mobile {
+    display: none;
+  }
+}
+@media (max-width: 767.9999px) {
+  .header-search-box {
+    display: none;
+  }
+}
+.header-search-form {
+  float: right;
+  padding-right: 5px;
+}
+
+.header-search-input {
+  background: url(http://pic.jusctice.cn/icons/search.png) no-repeat right;
+  border: none;
+  padding: 5px 25px 5px 0;
+  width: 0;
+  color: #fff;
+  /*设置动画样式*/
+  -webkit-transition: all 400ms ease;
+  -moz-transition: all 400ms ease;
+  -ms-transition: all 400ms ease;
+  -o-transition: all 400ms ease;
+  transition: all 400ms ease;
+}
+
+.header-search-input:focus {
+  width: 200px;
+}
+
+.header-search-input::-webkit-search-cancel-button {
+  display: none;
+}
+
+.IE-notice {
+  display: none;
+  background: #790d86;
+  color: white;
+  font-weight: 600;
+  position: relative;
+  top: 50px;
+  left: 0;
+  padding: 5px;
+}
+
+/*footer start*/
+.footer {
+  width: 100%;
+  background: #330f10;
+  margin-top: 3rem;
+  border-top: 1px solid rgba(187, 156, 255, 0.3);
+}
+.footer a {
+  color: #bac2f5;
+}
+
+/*footer end*/
+/*main-content start*/
+.main-content {
+  margin: 50px auto;
+}
+
+/*main-content end*/
+/*index.ejs start*/
+.background-img-wrap-full {
+  margin: 0 auto;
+  background: #eee 0 0 no-repeat;
+  background-size: cover;
+}
+.background-img-wrap-full h1 {
+  background: rgba(0, 0, 0, 0.9);
+  margin: 50px 20px;
+  font-size: 22px;
+  color: #d9d9d9;
+  line-height: 1.4;
+}
+
+.login-and-reg a {
+  margin: 10px 5px;
+  /*background:rgba(44,44,44,.5);*/
+  font-size: 20px;
+  display: block;
+}
+
+/*index.ejs end*/
+/*pagination*/
+.pagination > .active-red > a, .pagination > .active-red > span, .pagination > .active-red > a:hover, .pagination > .active-red > span:hover, .pagination > .active-red > a:focus, .pagination > .active-red > span:focus {
+  background-color: #bf383c;
+}
+
+.pagination > li > a {
+  background-color: transparent;
+  border-radius: 0;
+  border: 1px solid #5C3957;
+}
+
+.pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {
+  background-color: #47233e;
+}
+
+.pagination > .disabled > span, .pagination > .disabled > span:hover, .pagination > .disabled > span:focus, .pagination > .disabled > a, .pagination > .disabled > a:hover, .pagination > .disabled > a:focus {
+  background-color: transparent;
+  border: 1px solid #5C3957;
 }
