--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,19 +1,265 @@
+@charset "UTF-8";
 @import "compass/css3";
 
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@import "helper.css";
+
+/*vars start*/
+$hover-bgcolor-grey: #e4e4e4;
+$hover-bgcolor-lightpur: #47233e;
+$bgcolor-mauve: #330f10;
+$main-font-color-pur:#790d86;
+$main-font-color-lightpur:#bac2f5;
+$main-border-color-lightpur: rgba(187,156,255,.3);
+$header-height:50px;
+/*vars end*/
+html {
+	font-size: 10px;
 }
 
-a {
-  color: #00B7FF;
+@media only screen and (min-width: 360px) {
+	html {
+		font-size: 11.25px !important;
+	}
 }
-.test1{
-  color:red;
+
+@media only screen and (min-width: 401px) {
+	html {
+		font-size: 12.5px !important;
+	}
 }
-.test2{
-  color:green;
+
+@media only screen and (min-width: 428px) {
+	html {
+		font-size: 13.375px !important;
+	}
 }
-.test3{
-  color:#eee;
+
+@media only screen and (min-width: 461px) {
+	html {
+		font-size: 16px !important;
+	}
 }
+
+body{
+	font-family:"Open Sans","Microsoft YaHei","weiruanyahei",Arial,sans-serif !important;
+	background: #330f10;
+	color:$main-font-color-lightpur;
+}
+a{
+	color:$main-font-color-lightpur;
+	&:hover{
+		font-weight: bolder;
+		color:$main-font-color-lightpur;
+	}
+}
+.wrapper{
+	overflow: hidden;
+}
+.logo-img{
+	display: inline-block;
+	height:100%;
+}
+
+.divine-nav-block{
+	display: inline-block;
+}
+.divine-nav-block a{
+	color:$main-font-color-lightpur;
+	&:hover,&:focus{
+		background:$hover-bgcolor-lightpur !important;
+		font-weight: bolder;
+
+	}
+}
+
+.container{
+	max-width:1000px;
+}
+/*header start*/
+.header{
+	width:100%;
+	height: $header-height;
+	background:#1B0B18;
+	position: absolute;
+	top:0;
+	left:0;
+	& > div{
+		height:100%;
+	}
+	.navbar-header{
+		height:100%;
+		position: relative;
+		.header-search-input{
+			font-size: 1.6rem;
+		}
+		.header-search-box-mobile{
+			position: absolute;
+			right:60px;
+			width:100%;
+		}
+	}
+	.navbar-toggle{
+		outline: none;
+		&:focus{
+			background:$hover-bgcolor-lightpur !important;
+		}
+		.icon-bar{
+			background:$main-font-color-lightpur;
+		}
+	}
+	a{
+		color:$main-font-color-lightpur;
+		&:hover{
+			background:$hover-bgcolor-lightpur !important;
+			font-weight: bolder;
+		};
+		&:focus{
+			background:none !important;
+		};
+	}
+	@media (max-width:768px){
+		.navbar-right{
+			float: right;
+			text-align: right;
+			padding:0 5px;
+			margin:0 -15px 0 0;
+			background: black;
+			position:relative;
+			z-index:10;
+
+		}
+	}
+}
+
+.header-container{
+	//position: relative;
+}
+
+.header-search-box{
+	padding-top:10px;
+	padding-bottom: 10px;
+	width: 200px;
+	height:$header-height;
+	float:right;
+}
+
+.header-search-box-mobile{
+	padding-top:10px;
+	padding-bottom: 10px;
+	height:$header-height;
+	//position:relative;
+	z-index:5;
+	.header-search-input:focus{
+		outline: none;
+		border-bottom: 1px solid $main-border-color-lightpur;
+	}
+}
+
+@media (min-width: 768px) {
+	.header-search-box-mobile {
+		display: none
+	}
+}
+
+@media (max-width: 767.9999px) {
+	.header-search-box {
+		display: none
+	}
+}
+
+.header-search-form{
+	float: right;
+	padding-right:5px;
+}
+
+.header-search-input{
+	background: url(http://pic.jusctice.cn/icons/search.png) no-repeat right;
+	border:none;
+	padding:5px 25px 5px 0;
+	width: 0;
+	color: #fff;
+	/*设置动画样式*/
+	-webkit-transition: all 400ms ease;
+	-moz-transition: all 400ms ease ;
+	-ms-transition: all 400ms ease ;
+	-o-transition: all 400ms ease ;
+	transition: all 400ms ease ;
+}
+
+.header-search-input:focus{
+	width: 200px;
+}
+
+.header-search-input::-webkit-search-cancel-button {
+	display: none;
+}
+
+.IE-notice{
+	display: none;
+	background: #790d86;
+	color:white;
+	font-weight: 600;
+	position: relative;
+	top:50px;
+	left:0;
+	padding:5px;
+}
+/*footer start*/
+.footer{
+	width:100%;
+	background:$bgcolor-mauve;
+	margin-top:3rem;
+	border-top:1px solid rgba(187, 156, 255, .3);
+	a{
+		color: $main-font-color-lightpur;
+	}
+}
+
+
+/*footer end*/
+
+/*main-content 是页面的主体部分 start*/
+.main-content{
+	margin:$header-height auto;
+	width: 100%;
+	min-height: 500px;
+	//padding:0;
+}
+/*main-content end*/
+
+/*pagination*/
+.pagination > .active-red > a, .pagination > .active-red > span, .pagination > .active-red > a:hover, .pagination > .active-red > span:hover, .pagination > .active-red > a:focus, .pagination > .active-red > span:focus {
+	background-color:#bf383c;
+}
+.pagination > li > a {
+	background-color: transparent;
+	border-radius: 0;
+	border:1px solid #5C3957;
+}
+.pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {
+	background-color: $hover-bgcolor-lightpur;
+}
+//.pagination > li > a:hover{
+//  background:$hover-bgcolor-lightpur;
+//}
+.pagination > .disabled > span, .pagination > .disabled > span:hover, .pagination > .disabled > span:focus, .pagination > .disabled > a, .pagination > .disabled > a:hover, .pagination > .disabled > a:focus {
+	background-color: transparent;
+	border:1px solid #5C3957;
+}
+
+/*临时CSS 辅助线*/
+.border-red {
+	border: 1px solid red;
+}
+
+/*index.ejs start*/
+
+//
+//.login-and-reg a{
+//	margin:10px 5px;
+//	/*background:rgba(44,44,44,.5);*/
+//	font-size:20px;
+//	//color:#fff;
+//	display: block;
+//}
+/*index.ejs end*/
