提交关于ckeditor的demo

--- a/public/stylesheets/helper.css
+++ b/public/stylesheets/helper.css
@@ -114,3 +114,12 @@
     border-color: #9d4ae1
 }
 
+/*定位 start*/
+.absolute {
+	position: absolute;
+}
+.relative {
+	position: relative;
+}
+/*定位 end*/
+
