--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,9 +28,7 @@
                     <div class="avatar-wrap absolute" style="">
                         <img src="imgs/no-data-cat.jpg" id="avatarImg" alt="头像" class="avatar"/>
 
-                        <p id="avatarName" class="avatar-name">hamupp&nbsp;
-                            <a href="/editMyFile?uid=uid" class="edit-avatar hide">编辑头像</a>
-                        </p>
+                        <p id="avatarName" class="avatar-name">hamupp&nbsp;</p>
                     </div>
                 </div>
             </div>
