--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -14,6 +14,7 @@ $main-font-color-black:#333;
 $font-color-black-2:#808080;//2级小标题的浅灰色
 $main-font-color-lightpur:#bac2f5;
 $main-border-color-lightpur: rgba(187,156,255,.3);
+$border-light-mauve: #5C3957;
 $header-height:50px;
 /*vars end*/
 
@@ -22,7 +23,9 @@ $header-height:50px;
 html {
 	font-size: 10px;
 }
-
+ul,ol {
+	list-style: none;
+}
 @media only screen and (min-width: 360px) {
 	html {
 		font-size: 11.25px !important;
@@ -312,5 +315,4 @@ a:hover {
 		margin-left: auto;
 		margin-right: auto;
 	}
-
 }
