--- a/public/javascript/ckeditor 2/contents.css
+++ b/public/javascript/ckeditor 2/contents.css
@@ -6,8 +6,8 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 body
 {
 	/* Font */
-	font-family: sans-serif, Arial, Verdana, "Trebuchet MS";
-	font-size: 12px;
+	font-family: "Open Sans","Microsoft YaHei","weiruanyahei",Arial,sans-serif;
+	/*font-size: 12px;*/
 
 	/* Text color */
 	color: #333;
@@ -20,7 +20,7 @@ body
 
 .cke_editable
 {
-	font-size: 13px;
+	font-size: 14px;
 	line-height: 1.6;
 
 	/* Fix for missing scrollbars with RTL texts. (#10488) */
