--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -19,16 +19,16 @@
                 <div class="col-sm-3 col-lg-2 ">
 					<div class="list-transparent-border">
 						<div class="list-wrapper">
-							<h2>操作</h2>
+							<h4>操作</h4>
 							<ul class="inner-list">
-								<li><a href="">添加新文章</a></li>
-								<li>暂无功能</li>
+								<li><a href="javascript:;" id="addNewPaper">添加新文章</a></li>
+								<li><a href="">草稿箱</a></li>
 								<li>暂无功能</li>
 								<li>暂无功能</li>
 							</ul>
 						</div>
 						<div class="list-wrapper">
-							<h2>分类</h2>
+							<h4>分类</h4>
 							<ul class="inner-list">
 								<li><a href="">编辑分类</a></li>
 								<li>暂无功能</li>
@@ -48,46 +48,55 @@
 							<li role="presentation"><a href="#">Messages</a></li>
 						</ul>
 					</div>
-					<div class="content-area">
+					<div class="content-area" id="contentArea">
 						<table class="table">
 							<tr>
 								<th>标题</th>
 								<th>发布状态</th>
 								<th>评论数</th>
 								<th>阅读数</th>
-								<th>操作</th>
+								<th class="text-center">操作</th>
 							</tr>
 							<tr>
 								<td>标题文字1：XXXXXXXXXXXXXXXXXXXX</td>
 								<td>未发布</td>
 								<td>0</td>
 								<td>0</td>
-								<td><a href="">编辑</a><a href="">删除</a></td>
+								<td>
+									<a href="">编辑</a>
+									<a class="fr" href="">删除</a>
+								</td>
+							</tr>
+							<tr>
+								<td>标题文字1：XXXXXXXXXXXXXXXXXXXX</td>
+								<td>未发布</td>
+								<td>0</td>
+								<td>0</td>
+								<td>
+									<a href="">编辑</a>
+									<a class="fr" href="">删除</a>
+								</td>
+							</tr>
+							<tr>
+								<td>标题文字1：XXXXXXXXX</td>
+								<td>未发布</td>
+								<td>0</td>
+								<td>0</td>
+								<td>
+									<a href="">编辑</a>
+									<a class="fr" href="">删除</a>
+								</td>
 							</tr>
 						</table>
 					</div>
 
-                    <div class="paragram-wrapper">
-                        <p class="paragram-text2">2016年06月</p>
-                        <h3>文章标题</h3>
-                        <p>摘要 或者截取文章内容的片段 摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段</p>
-                    </div>
 
-                    <div class="paragram-wrapper">
-                        <p class="paragram-text2">2016年06月</p>
-                        <h3>文章标题</h3>
-                        <p>摘要 或者截取文章内容的片段 摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段</p>
-                    </div>
-
-                    <div class="paragram-wrapper">
-                        <p class="paragram-text2">2016年06月</p>
-                        <h3>文章标题</h3>
-                        <p>摘要 或者截取文章内容的片段 摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段摘要 或者截取文章内容的片段</p>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 	<% include common-bottom-tags.ejs %>
+	<script src="javascript/ckeditor 2/ckeditor.js"></script>
+	<script src="javascript/manageCommon.js"></script>
 </body>
 </html>
