修改后台的编辑器页面

--- a/public/stylesheets/component.scss
+++ b/public/stylesheets/component.scss
@@ -104,3 +104,16 @@
 		}
 
 }
+
+/*等宽 小方块样式 左对齐 水平排列 多了换行*/
+.brick-inline-wrapper {
+	text-align: left;
+	.brick-inline-item {
+		display: inline-block;
+		border:1px solid red;
+		margin-right:30px;
+		width: 25%;
+		vertical-align: top;
+	}
+}
+/*后台管理 start*/
