--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -96,7 +96,7 @@
         </div>
     </div>
 	<% include common-bottom-tags.ejs %>
-	<script src="javascript/ckeditor 2/ckeditor.js"></script>
+	<script src="javascript/ckeditor-dev/ckeditor.js"></script>
 	<script src="javascript/manageCommon.js"></script>
 </body>
 </html>
