--- a/public/javascript/ckeditor-dev/contents.css
+++ b/public/javascript/ckeditor-dev/contents.css
@@ -6,7 +6,7 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 body
 {
 	/* Font */
-	font-family: sans-serif, Arial, Verdana, "Trebuchet MS";
+	font-family: "Open Sans","Microsoft YaHei","weiruanyahei",Arial,sans-serif;
 	font-size: 12px;
 
 	/* Text color */
@@ -20,7 +20,7 @@ body
 
 .cke_editable
 {
-	font-size: 13px;
+	font-size: 16px;
 	line-height: 1.6;
 
 	/* Fix for missing scrollbars with RTL texts. (#10488) */
